Fixed messages width on narrow pages

--- a/web/css/abstracts/mixins/_page.less
+++ b/web/css/abstracts/mixins/_page.less
@@ -10,6 +10,7 @@
             }
             .page-main {
                 padding-bottom: @narrow-page__padding-bottom;
+                .page.messages,
                 .columns {
                     max-width: @sm;
                     margin: 0 auto;
@@ -17,6 +18,7 @@
             }
         }
         @media @media-md {
+            .page-main .page.messages,
             .page-main .columns {
                 max-width: @md;
             }
